# AIagent

./: .gitignore  LICENSE
apps/audit-agents/: Makefile  README.md  pyproject.toml
apps/audit-agents/audit_agents/: __init__.py  state.py  supervisor.py
apps/audit-agents/tests/: test_state.py  test_supervisor.py
apps/audit-api/: Makefile  README.md  pyproject.toml
apps/audit-api/audit_api/: __init__.py  casing.py  mock_service.py  repository.py  server.py
apps/audit-api/tests/: test_casing.py  test_mock_service.py  test_repository.py  test_server.py
apps/audit-web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/audit-web/src/: App.tsx  main.tsx  styles.css
apps/audit-web/src/components/: AnalysisTimeline.tsx  ArtifactViewer.tsx  FindingBoard.tsx  HumanGateCard.tsx
apps/audit-web/src/lib/: types.ts  workbenchData.ts
apps/audit-web/src/tests/: App.test.tsx  workbenchData.test.ts
docs/blueprints/: binary-audit-platform-backend-blueprint.md  binary-audit-platform-frontend-blueprint.md  codexcli-continuation-prompt.md  decision-log.md  event-schema.md  feature-registry.md  implementation-progress.md  openapi-contract.md
docs/superpowers/plans/: 2026-04-24-audit-agents-supervisor.md  2026-04-24-audit-api-agent-state-wiring.md  2026-04-24-audit-api-approval-mock-flows.md  2026-04-24-audit-api-artifacts-findings.md  2026-04-24-audit-api-detail-routes.md  2026-04-24-audit-api-mock-run-resume.md  2026-04-24-audit-api-mock-run-start.md  2026-04-24-audit-api-mock-service.md  2026-04-24-audit-api-post-dispatch.md  2026-04-25-audit-web-workbench.md
docs/superpowers/specs/: 2026-04-24-audit-api-artifacts-findings-design.md
libs/audit-common/: Makefile  README.md  pyproject.toml
libs/audit-common/audit_common/: __init__.py  schemas.py
libs/audit-common/tests/: test_schemas.py
libs/cli/js-examples/: package.json
libs/cli/js-monorepo-example/: package.json
libs/cli/js-monorepo-example/apps/agent/: package.json
